# autopush-rs

./: Cargo.toml
autoconnect/autoconnect-protocol/: Cargo.toml
autoconnect/autoconnect-registry/: Cargo.toml
autoconnect/autoconnect-web/: Cargo.toml
autoconnect/autoconnect-web/src/: client.rs
autoconnect/autoconnect-ws/: Cargo.toml
autoconnect/autoconnect-ws/autoconnect-ws-sm/: Cargo.toml
autoconnect/autoconnect-ws/autoconnect-ws-sm/src/: error.rs  lib.rs  unidentified.rs
autoconnect/autoconnect-ws/src/: handler.rs  lib.rs  session.rs
autoendpoint/: Cargo.toml
autoendpoint/src/: server.rs
autoendpoint/src/db/: client.rs
autoendpoint/src/routers/: webpush.rs
autoendpoint/src/routes/: webpush.rs
autopush/: Cargo.toml
autopush/src/: client.rs  main.rs
autopush/src/db/: mod.rs  models.rs
autopush/src/server/: mod.rs
docs/src/: index.md  protocol.md
tests/: pyproject.toml
