[package]
name = "autoconnect_ws"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http.workspace = true
actix-rt.workspace = true
actix-web.workspace = true
actix-ws.workspace = true
futures.workspace = true
futures-util.workspace = true
tokio.workspace = true

async-trait = "0.1"
mockall = "0.11"

autoconnect_protocol.workspace = true
autoconnect_ws_sm = { path = "./autoconnect-ws-sm" }
autopush_common.workspace = true
