[package]
name = "autoconnect_ws_sm"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix-web.workspace = true
cadence.workspace = true
uuid.workspace = true
thiserror.workspace = true
tokio.workspace = true

autoconnect_protocol.workspace = true
autoconnect_registry.workspace = true
autoconnect_settings.workspace = true
#autoconnect_web.workspace = true
#autoconnect_ws.workspace = true
autopush_common.workspace = true
